--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <main>
         <section id="telefone">
-
+            <iframe src="home.html" name="tela" id="tela"></iframe>
         </section>
         <section id="Redes sociais">
 
         </section>
     </main>
 </body>
-</html>
+</html> 
