--- a/twitter.html
+++ b/twitter.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>youtube</title>
+    <title>Twitter</title>
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="">
-    <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">ACESSE</a>
+    <img src="imagens/tela-twitter.jpg" alt="">
+    <a href="https://x.com/?lang=pt-br" target="_blank">ACESSE</a>
+    
 </body>
 </html>
